Sortiranje zavrseno + mapa na filmu demo
Sortiranje radi okej koliko sam probao, pogledaj malo kod nije neka mudrost malo je hardkod...
Ova mapa mi se cini da je ok,
iframe mi ne radi za yt, a ni neki embed koji sam nasao na bootstrapu.

Sad cu da odradim mapu na svim stranicama i da popravim one sitnice sto sam rekao na pocetku jutros

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,5 @@
 
+
 .film-description {
 	font-size:calc(12px + 0.3vw);
 }
@@ -195,6 +196,13 @@ nav ul li a:before {
 }
 nav ul li a:hover {
   color: #555;
+}
+
+.sortable-link:hover {
+	color: gray;
+}
+.sortable-link {
+	color: black;
 }
 
 
