--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,15 @@
 
+.kratka-vest {
+
+	padding-top:2px;
+	
+}
+
+.list-group-item.active, .list-group-item.active:hover, .list-group-item.active:focus {
+  background-color:#FFE898;
+  border: 0px;
+  color: black;
+}
 
 .film-description {
 	font-size:calc(12px + 0.3vw);
